# kde1-kdenetwork

./: .cvsignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.cvs  README  acconfig.h  acincktalk.m4  automoc  config.h.bot  configure.in.1  configure.in.2  configure.in.in  kdenetwork.spec  kdenetwork.spec.in  libtool.m4.in  ltconfig
doc/kppp/: Makefile.am  kppp-1.html  kppp-10.html  kppp-11.html  kppp-12.html  kppp-14.html  kppp-16.html  kppp-18.html  kppp-2.html  kppp-3.html  kppp-4.html  kppp-5.html  kppp-6.html  kppp-7.html  kppp-8.html  kppp-9.html  kppp.html  kppp.sgml  t-online.kppp.html
karchie/: KAMenu.cpp  KAMenu.h  KAQuery.cpp  KAQuery.h  KASettings.cpp  KAStatusBar.cpp  KAView.cpp  KArchie.cpp  Makefile.am  dirsend.c  karchie.kdelnk  pmachine.h  pprot.h  ptalloc.c
kbiff/: .cvsignore  AUTHORS  BUGS  CMakeLists.txt  ChangeLog  Makefile.am  README  TODO  Trace.cpp  Trace.h  VERSION  kbiff.cpp  kbiff.h  kbiff.kdelnk  kbiff.lsm  kbiff.xpm  kbiffmonitor.cpp  kbiffmonitor.h  kbiffurl.cpp  kbiffurl.h  ktreeview.cpp  ktreeview.h  main.cpp  mini-kbiff.xpm  notify.cpp  notify.h  setupdlg.cpp  setupdlg.h  status.cpp  status.h
kbiff/pics/: CMakeLists.txt  Makefile.am
kfinger/: .cvsignore  AUTHOR  CMakeLists.txt  Makefile.am  finger.C  finger.h  kfinger.C  kfinger.kdelnk  kfingerrc
kfinger/toolbar/: CMakeLists.txt
kmail/: .cvsignore  CMakeLists.txt  ChangeLog  KMail.kdelnk  Makefile.am  kbusyptr.cpp  kmaccount.cpp  kmaccount.h  kmacctlocal.cpp  kmacctpop.cpp  kmacctpop.h  kmcomposewin.cpp  kmfilteraction.cpp  kmfilterdlg.cpp  kmfilterdlg.h  kmfolder.cpp  kmfolder.h  kmfolderdir.cpp  kmfoldertree.cpp  kmfoldertree.h  kmheaders.cpp  kmheaders.h  kmmainwin.cpp  kmmainwin.h  kmmessage.cpp  kmmsgbase.cpp  kmmsgpart.cpp  kmnewiostatus.cpp  kmnewiostatuswdg.cpp  kmreaderwin.cpp  kmreaderwin.h  kmsender.cpp  kmsettings.cpp  kmsettings.h  kmversion.h  kpgp.cpp  kpgpbase.cpp  main.cpp
kmail/doc/: index-3.html  index-4.html  index.html  index.sgml
kmail/pics/: CMakeLists.txt
knu/: .cvsignore  CMakeLists.txt  ChangeLog  CommandDlg.cpp  CommandDlg.h  FingerDlg.cpp  FingerDlg.h  HostDlg.cpp  HostDlg.h  Makefile.am  MtrDlg.cpp  MtrDlg.h  OptionsDlg.cpp  OptionsDlg.h  PingDlg.cpp  PingDlg.h  README  README.mtr  TracerouteDlg.cpp  TracerouteDlg.h  knu.cpp  knu.h  knu.kdelnk  knu.lsm  knu.xpm  mtr-0.21.diff  version.h
korn/: .cvsignore  CMakeLists.txt  KOrn.kdelnk  Makefile.am  Makefile.in  kmailbox.cpp  kmailbox.h  korn.cpp  korn.h  korn.xpm  kornbutt.cpp  kornbutt.h  kornopt.cpp  optdata.cpp  real_from.cpp
kppp/: .cvsignore  AUTHORS  ChangeLog  HISTORY  INSTALL  Kppp.kdelnk  Makefile  Makefile.am  Makefile.in  NEWS  README  README.ModemDB  TODO  accounting.cpp  accounting.h  accounts.cpp  accounts.h  acctselect.cpp  acctselect.h  auth.h  chap.cpp  chap.h  config.h  configdiff  connect.cpp  connect.h  convlog.tcl  conwindow.cpp  conwindow.h  debug.cpp  debug.h  devices.h  docking.cpp  docking.h  edit.cpp  edit.h  finishpic.h  general.cpp  general.h  groupbox.cpp  (+69 more)
kppp/Rules/: Makefile.am  TEMPLATE  checkrules
kppp/docs/: costsgraphs.fig  ifconfig.c  kppp-1.html  kppp-2.html  kppp-3.html  kppp-4.html  kppp-5.html  kppp-6.html  kppp-7.html  kppp-8.html  kppp-9.html  kppp.html  kppp.ps  kppp.sgml
kppp/icons/: Makefile.am  kppp.xpm  mini-kppp.xpm
kppp/logview/: .cvsignore  Makefile.am  kppplogview.kdelnk  log.cpp  log.h  loginfo.cpp  loginfo.h  main.cpp  main.h  monthly.cpp
kppp/pixmaps/: Makefile.am  kppp.xpm  kppplogo.xpm  modemboth.xpm  modemleft.xpm  modemnone.xpm  modemright.xpm
krn/: .cvsignore  CHANGES  KEdit.cpp  Krn.kdelnk  Makefile.am  Makefile.in  Makefile.in.cvs  Makefile.in.tarball  NNTP.cpp  NNTP.h  NNTPConfigDlg.cpp  NNTPConfigDlg.h  NNTPConfigDlgData.cpp  NNTPConfigDlgData.h  NewMsgDlg.cpp  NewMsgDlg.dlg  NewMsgDlg.h  NewMsgDlgData.cpp  NewMsgDlgData.h  PartProps.cpp  PartProps.dlg  PartProps.h  PartPropsData.cpp  PartPropsData.h  PostDialog.cpp  PostDialog.dlg  PostDialog.h  PostDialogData.cpp  PostDialogData.h  README  TooManydlg.cpp  aboutDlg.cpp  aboutDlg.h  aboutDlgData.cpp  aboutDlgData.h  aboutkrn.dlg  artdlg.cpp  artdlg.h  asker.cpp  asker.dlg  (+87 more)
krn/docs/: Makefile.am  Makefile.in  articles.html  offline.html
krn/pics/: Makefile.am  Makefile.in  black-bullet.xpm  folder.xpm  followup.xpm  green-bullet.xpm  krnfolder.xpm  logo.xpm  mailpost.xpm  red-bullet.xpm  subscr.xpm  tagged.xpm
ksirc/: .cvsignore  BUGLIST  ChangeLog  FilterRuleEditor.cpp  FilterRuleEditor.dlg  FilterRuleEditor.h  FilterRuleEditorData.cpp  FilterRuleEditorData.h  KMDIMgr.cpp  KMDIMgrBase.cpp  KSircColour.cpp  KSircColour.dlg  KSircColour.h  KSircColourData.cpp  KSircColourData.h  Makefile  Makefile.am  Makefile.in  README  README.colour  README.filters  ahistlineedit.cpp  ahistlineedit.h  ahtmlview.cpp  ahtmlview.h  alistbox.cpp  alistbox.h  baserules.cpp  baserules.h  cdate.h  chanparser.cpp  chanparser.h  config.h  control.cpp  control.h  control_message.h  dccDialog.cpp  dccDialogData.cpp  dccDialogData.h  displayMgr.cpp  (+68 more)
ksirc/KSColourPicker/: .cvsignore  Makefile.am  Makefile.in  kscolourpicker.cpp  kscolourpickerData.cpp  kscolourpickerData.h
ksirc/KSCutDialog/: .cvsignore  KSCutDialog.cpp  KSCutDialog.dlg  KSCutDialog.h  KSCutDialogData.cpp  KSCutDialogData.h  Makefile.am  Makefile.in  cutmle.cpp
ksirc/KSOpenkSirc/: .cvsignore  Makefile.am  enter_combo.cpp  open_ksirc.cpp  open_ksircData.cpp  open_ksircData.h  openksircproc.dlg  serverDataType.h  serverFileParser.cpp  servers.txt
ktalkd/: ChangeLog  Makefile.am  README  SNPRINTF_MISSING  TODO  ktalkd.lsm
mimelib/: CHANGES  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README  README.mimepp  Tutorial  address.cpp  addrlist.cpp  attach.cpp  basicmsg.cpp  basicmsg.h  binhex.cpp  body.cpp  bodypart.cpp  boyermor.cpp  datetime.cpp  disptype.cpp  dw_cte.cpp  dw_date.cpp  dw_mime.cpp  entity.cpp  field.cpp  fieldbdy.cpp  group.cpp  header.cpp  header.i  headers.cpp  mailbox.cpp  mboxlist.cpp  mechansm.cpp  mediatyp.cpp  message.cpp  msgcmp.cpp  msgid.cpp  multipar.cpp  nntp.cpp  param.cpp  pop.cpp  (+6 more)
(+803 files in other folders)
